# soundcloud-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/soundcloud_organizer/: __init__.py  auth.py  client.py  config.py  logging_config.py  main.py  models.py  processor.py  scope_parser.py
tasks/: prd-date-interval-filter.md  prd-soundcloud-organizer.md  prd-structured-logging.md  tasks-prd-date-interval-filter.md  tasks-prd-soundcloud-organizer.md  tasks-prd-structured-logging.md
tests/: test_client.py  test_main.py  test_processor.py  test_scope_parser.py
